<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/ButtonColorLight"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Views.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ToolBarLogo" />


    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:theme="@style/PrimaryButton"
        app:toggleCheckedStateOnClick="true" />

    <TextView
        android:id="@+id/textViewReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Nie posiadasz konta? Kliknij w poniższy przycisk" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/registerUser"
        android:textColor="@color/black"
        android:theme="@style/PrimaryButton"
        app:toggleCheckedStateOnClick="true" />

    <TextView
        android:id="@+id/textViewRemPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Zapomniałeś hasła? Kliknij w poniższy przycisk " />

    <Button
        android:id="@+id/buttonRemPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/pass_remind"
        android:textColor="@color/black"
        android:theme="@style/PrimaryButton"
        app:toggleCheckedStateOnClick="true" />
</LinearLayout>




